--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.17.1
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
@@ -46,6 +47,7 @@ jupyter_client==8.6.3
 jupyter_core==5.8.1
 kagglehub==0.3.13
 kiwisolver==1.4.9
+Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.6
